--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@ body, html {
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
 	color: #333;
+	background-image: url("../img/images.jpg");
+	background-size: cover;
 }
 h1 {
 }
@@ -78,33 +80,29 @@ hr {
 	transition: all 0.8s;
 }
 #menu.navbar-default {
-    border-color: rgba(231, 231, 231, 0);
-    background-color: #82ba00;
+    margin-bottom: 0px;
 }
 #menu a.navbar-brand {
-    font-size: 22px;
-    color: #fff;
-    font-weight: 700;
-    font-family: unset;
-    font-style: inherit;
+    font-size: 18px;
+    color: #8a82b1;
 }
 #menu a.navbar-brand i.fa {
 	color: #88bb45;
 }
 #menu.navbar-default .navbar-nav > li > a {
-    color: #ffffff;
+    color: #8a82b1;
     font-size: 14px;
     letter-spacing: 1px;
 }
 #menu.navbar-default .navbar-nav > li > a:hover {
-    color: #eaeaea;
+    color: #4d295f;
 }
 .on {
-	background-color: #82ba00 !important;
+	background-color: #ffffff !important;
 	padding: 0 !important;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-	color: #000000 !important;
+	color: #9106f7 !important;
 	background-color: transparent;
 }
 .navbar-toggle {
@@ -113,7 +111,7 @@ hr {
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
     background-color: #67865500;
-    border-color: #f7f7f7;
+    border-color: #c1c1c1;
     border-radius: 8px;
 }
 .navbar-default .navbar-toggle:hover>.icon-bar {
@@ -124,10 +122,8 @@ hr {
 }
 /* Home Style */
 header {
-    background: url(../img/header-bg.jpg) no-repeat bottom center;
-    color: #cfcfcf;
     position: relative;
-    height: 550px;
+
 }
 header p {
 	color: rgba(255,255,255,0.5);
@@ -170,7 +166,7 @@ header p {
 /* About Section */
 #about-section {
     /* padding: 50px 50px; */
-    background-color: #f7f7f7;
+    background-color: #ece9e9;
     padding-top: 4em;
     padding-bottom: 4em;
 }
@@ -345,6 +341,7 @@ ol.type li a:hover {
 #contact-section {
     padding-top: 3em;
     padding-bottom: 5em;
+    background-color: azure;
 }
 #contact-section form {
 	padding: 30px 0;
@@ -425,15 +422,15 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 /* Footer */
 #footer {
-    background-color: #4e1f6b;
+    background-color: #8d81b5;
     color: #d0cdcd;
-    padding-top: 3em;
-    padding-bottom: 3em;
+    padding-top: 2em;
+    padding-bottom: 1em;
 }
 #footer p {
-    font-size: 13px;
+    font-size: 12px;
     margin-top: 10px;
-    color: #d0cdcd;
+    color: #000000;
 }
 #footer a {
 	color: #aaa;
@@ -451,7 +448,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 
 @media (max-width: 603px) {
 #menu.navbar-default {
-	background-color:#71bd46;
+	background-color: #ffffff;
 }
 label {
 	float: none !important
@@ -604,9 +601,12 @@ background: #428bca;
 }
 #hours-section {
     padding: 40px 0;
-    background-color: #d8d8d8;
+    background-color: #8cc2a0;
     color: #292525;
 }
 #hours-section p{
     color: #292525;
+}
+header {
+    background-color: white;
 }
