--- a/app/assets/css/material-dashboard.css
+++ b/app/assets/css/material-dashboard.css
@@ -1,403 +1,37 @@
-/* #8b82b0   violeta */
-/* #8cc2a0     verde */
-
-.noUi-target,
-.noUi-target * {
-  -webkit-touch-callout: none;
-  -ms-touch-action: none;
-  user-select: none;
-  box-sizing: border-box;
-}
-
-.noUi-base {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.noUi-origin {
-  position: absolute;
-  right: 0;
-  top: 0;
-  left: 0;
-  bottom: 0;
-}
-
-.noUi-handle {
-  position: relative;
-  z-index: 1;
-  box-sizing: border-box;
-}
-
-.noUi-stacking .noUi-handle {
-  z-index: 10;
-}
-
-.noUi-state-tap .noUi-origin {
-  transition: left 0.3s, top 0.3s;
-}
-
-.noUi-state-drag * {
-  cursor: inherit !important;
-}
-
-.noUi-horizontal {
-  height: 10px;
-}
-
-.noUi-handle {
-  box-sizing: border-box;
-  width: 14px;
-  height: 14px;
-  left: -10px;
-  top: -6px;
-  cursor: pointer;
-  border-radius: 100%;
-  transition: all 0.2s ease-out;
-  border: 1px solid;
-  background: #FFFFFF;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
-
-.noUi-vertical .noUi-handle {
-  margin-left: 5px;
-  cursor: ns-resize;
-}
-
-.noUi-horizontal.noUi-extended {
-  padding: 0 15px;
-}
-
-.noUi-horizontal.noUi-extended .noUi-origin {
-  right: -15px;
-}
-
-.noUi-background {
-  height: 2px;
-  margin: 20px 0;
-}
-
-.noUi-origin {
-  margin: 0;
-  border-radius: 0;
-  height: 2px;
-  background: #c8c8c8;
-}
-.noUi-origin[style^="left: 0"] .noUi-handle {
-  background-color: #fff;
-  border: 2px solid #c8c8c8;
-}
-.noUi-origin[style^="left: 0"] .noUi-handle.noUi-active {
-  border-width: 1px;
-}
-
-.noUi-target {
-  border-radius: 3px;
-}
-
-.noUi-horizontal {
-  height: 2px;
-  margin: 15px 0;
-}
-
-.noUi-vertical {
-  height: 100%;
-  width: 2px;
-  margin: 0 15px;
-  display: inline-block;
-}
-
-.noUi-handle.noUi-active {
-  transform: scale3d(2, 2, 1);
-}
-
-[disabled].noUi-slider {
-  opacity: 0.5;
-}
-
-[disabled] .noUi-handle {
-  cursor: not-allowed;
-}
-
-.slider {
-  background: #c8c8c8;
-}
-
-.slider.noUi-connect {
-  background-color: #9c27b0;
-}
-.slider .noUi-handle {
-  border-color: #9c27b0;
-}
-.slider.slider-info .noUi-connect, .slider.slider-info.noUi-connect {
-  background-color: #00bcd4;
-}
-.slider.slider-info .noUi-handle {
-  border-color: #00bcd4;
-}
-.slider.slider-success .noUi-connect, .slider.slider-success.noUi-connect {
-  background-color: #4caf50;
-}
-.slider.slider-success .noUi-handle {
-  border-color: #4caf50;
-}
-.slider.slider-warning .noUi-connect, .slider.slider-warning.noUi-connect {
-  background-color: #ff9800;
-}
-.slider.slider-warning .noUi-handle {
-  border-color: #ff9800;
-}
-.slider.slider-danger .noUi-connect, .slider.slider-danger.noUi-connect {
-  background-color: #f44336;
-}
-.slider.slider-danger .noUi-handle {
-  border-color: #f44336;
-}
-
-/*!
-Animate.css - http://daneden.me/animate
-Licensed under the MIT license - http://opensource.org/licenses/MIT
-
-Copyright (c) 2015 Daniel Eden
-*/
-.animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-.animated.infinite {
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-}
-
-.animated.hinge {
-  -webkit-animation-duration: 2s;
-  animation-duration: 2s;
-}
-
-.animated.bounceIn,
-.animated.bounceOut {
-  -webkit-animation-duration: .75s;
-  animation-duration: .75s;
-}
-
-.animated.flipOutX,
-.animated.flipOutY {
-  -webkit-animation-duration: .75s;
-  animation-duration: .75s;
-}
-
-@-webkit-keyframes shake {
-  from, to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translate3d(-10px, 0, 0);
-    transform: translate3d(-10px, 0, 0);
-  }
-  20%, 40%, 60%, 80% {
-    -webkit-transform: translate3d(10px, 0, 0);
-    transform: translate3d(10px, 0, 0);
-  }
-}
-@keyframes shake {
-  from, to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translate3d(-10px, 0, 0);
-    transform: translate3d(-10px, 0, 0);
-  }
-  20%, 40%, 60%, 80% {
-    -webkit-transform: translate3d(10px, 0, 0);
-    transform: translate3d(10px, 0, 0);
-  }
-}
-.shake {
-  -webkit-animation-name: shake;
-  animation-name: shake;
-}
-
-@-webkit-keyframes fadeInDown {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-@keyframes fadeInDown {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-.fadeInDown {
-  -webkit-animation-name: fadeInDown;
-  animation-name: fadeInDown;
-}
-
-@-webkit-keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-.fadeOut {
-  -webkit-animation-name: fadeOut;
-  animation-name: fadeOut;
-}
-
-@-webkit-keyframes fadeOutDown {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-}
-@keyframes fadeOutDown {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-}
-.fadeOutDown {
-  -webkit-animation-name: fadeOutDown;
-  animation-name: fadeOutDown;
-}
-
-@-webkit-keyframes fadeOutUp {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-}
-@keyframes fadeOutUp {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-    -webkit-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-}
-.fadeOutUp {
-  -webkit-animation-name: fadeOutUp;
-  animation-name: fadeOutUp;
-}
-
 h1, .h1 {
   font-size: 3.8em;
   line-height: 1.15em;
 }
-
 h2, .h2 {
   font-size: 2.6em;
 }
-
 h3, .h3 {
   font-size: 1.825em;
   line-height: 1.4em;
   margin: 20px 0 10px;
 }
-
 h4, .h4 {
   font-size: 1.3em;
   line-height: 1.4em;
 }
-
 h5, .h5 {
   font-size: 1.25em;
   line-height: 1.4em;
   margin-bottom: 15px;
 }
-
 h6, .h6 {
   font-size: 1em;
   text-transform: uppercase;
   font-weight: 500;
 }
-
 h2.title {
   margin-bottom: 30px;
 }
-
-.description,
-.card-description,
-.footer-big p {
-  color: #999999;
-}
-
-.text-warning {
-  color: #ff9800;
-}
-
-.text-primary {
-  color: #9c27b0;
-}
-
-.text-danger {
-  color: #f44336;
-}
-
-.text-success {
-  color: #4caf50;
-}
-
-.text-info {
-  color: #00bcd4;
-}
-
-.text-rose {
-  color: #e91e63;
-}
-
-.text-gray {
-  color: #999999;
-}
-
 .wrapper {
   position: relative;
   top: 0;
   height: 100vh;
 }
-
 .sidebar,
 .off-canvas-sidebar {
   position: absolute;
@@ -644,19 +278,18 @@ h2.title {
   -webkit-overflow-scrolling: touch;
 }
 
-.btn,
-.navbar .navbar-nav > li > a.btn {
-  border: none;
-  border-radius: 3px;
-  position: relative;
-  padding: 12px 30px;
-  margin: 10px 1px;
-  font-size: 12px;
-  font-weight: 400;
-  text-transform: uppercase;
-  letter-spacing: 0;
-  will-change: box-shadow, transform;
-  transition: box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1), background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+.btn, .navbar .navbar-nav > li > a.btn {
+    border: none;
+    border-radius: 3px;
+    position: relative;
+    padding: 8px;
+    margin: 10px 1px;
+    font-size: 12px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 0;
+    will-change: box-shadow, transform;
+    transition: box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1), background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn::-moz-focus-inner,
 .navbar .navbar-nav > li > a.btn::-moz-focus-inner {
@@ -755,39 +388,22 @@ h2.title {
 .navbar .navbar-nav > li > a.btn.btn-default.active {
   box-shadow: none;
 }
-.btn.btn-simple, .btn.btn-default.btn-simple,
-.navbar .navbar-nav > li > a.btn.btn-simple,
-.navbar .navbar-nav > li > a.btn.btn-default.btn-simple {
-  background-color: transparent;
-  color: #999999;
-  box-shadow: none;
-}
-.btn.btn-simple:hover, .btn.btn-simple:focus, .btn.btn-simple:active, .btn.btn-default.btn-simple:hover, .btn.btn-default.btn-simple:focus, .btn.btn-default.btn-simple:active,
-.navbar .navbar-nav > li > a.btn.btn-simple:hover,
-.navbar .navbar-nav > li > a.btn.btn-simple:focus,
-.navbar .navbar-nav > li > a.btn.btn-simple:active,
-.navbar .navbar-nav > li > a.btn.btn-default.btn-simple:hover,
-.navbar .navbar-nav > li > a.btn.btn-default.btn-simple:focus,
-.navbar .navbar-nav > li > a.btn.btn-default.btn-simple:active {
-  background-color: transparent;
-  color: #999999;
-}
 .btn.btn-primary, .btn.btn-primary:hover, .btn.btn-primary:focus, .btn.btn-primary:active, .btn.btn-primary.active, .btn.btn-primary:active:focus, .btn.btn-primary:active:hover, .btn.btn-primary.active:focus, .btn.btn-primary.active:hover, .open > .btn.btn-primary.dropdown-toggle, .open > .btn.btn-primary.dropdown-toggle:focus, .open > .btn.btn-primary.dropdown-toggle:hover, .navbar .navbar-nav > li > a.btn.btn-primary, .navbar .navbar-nav > li > a.btn.btn-primary:hover, .navbar .navbar-nav > li > a.btn.btn-primary:focus, .navbar .navbar-nav > li > a.btn.btn-primary:active, .navbar .navbar-nav > li > a.btn.btn-primary.active, .navbar .navbar-nav > li > a.btn.btn-primary:active:focus, .navbar .navbar-nav > li > a.btn.btn-primary:active:hover, .navbar .navbar-nav > li > a.btn.btn-primary.active:focus, .navbar .navbar-nav > li > a.btn.btn-primary.active:hover, .open >
  .navbar .navbar-nav > li > a.btn.btn-primary.dropdown-toggle, .open >
  .navbar .navbar-nav > li > a.btn.btn-primary.dropdown-toggle:focus, .open >
  .navbar .navbar-nav > li > a.btn.btn-primary.dropdown-toggle:hover {
-    background-color: #4caf50;
+    background-color: #5dad84;
     color: #f5f5f5;
     font-size: 12px;
-    /* font-weight: bold; */
     text-transform: unset;
 }
+/*
 .btn.btn-primary:focus, .btn.btn-primary:active, .btn.btn-primary:hover,
 .navbar .navbar-nav > li > a.btn.btn-primary:focus,
 .navbar .navbar-nav > li > a.btn.btn-primary:active,
 .navbar .navbar-nav > li > a.btn.btn-primary:hover {
   box-shadow: 0 14px 26px -12px rgba(156, 39, 176, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(156, 39, 176, 0.2);
-}
+}*/
 .btn.btn-primary.disabled, .btn.btn-primary.disabled:hover, .btn.btn-primary.disabled:focus, .btn.btn-primary.disabled.focus, .btn.btn-primary.disabled:active, .btn.btn-primary.disabled.active, .btn.btn-primary:disabled, .btn.btn-primary:disabled:hover, .btn.btn-primary:disabled:focus, .btn.btn-primary:disabled.focus, .btn.btn-primary:disabled:active, .btn.btn-primary:disabled.active, .btn.btn-primary[disabled], .btn.btn-primary[disabled]:hover, .btn.btn-primary[disabled]:focus, .btn.btn-primary[disabled].focus, .btn.btn-primary[disabled]:active, .btn.btn-primary[disabled].active, fieldset[disabled] .btn.btn-primary, fieldset[disabled] .btn.btn-primary:hover, fieldset[disabled] .btn.btn-primary:focus, fieldset[disabled] .btn.btn-primary.focus, fieldset[disabled] .btn.btn-primary:active, fieldset[disabled] .btn.btn-primary.active,
 .navbar .navbar-nav > li > a.btn.btn-primary.disabled,
 .navbar .navbar-nav > li > a.btn.btn-primary.disabled:hover,
@@ -960,25 +576,16 @@ h2.title {
   background-color: transparent;
   color: #4caf50;
 }
-.btn.btn-warning,
-.navbar .navbar-nav > li > a.btn.btn-warning {
-  box-shadow: 0 2px 2px 0 rgba(255, 152, 0, 0.14), 0 3px 1px -2px rgba(255, 152, 0, 0.2), 0 1px 5px 0 rgba(255, 152, 0, 0.12);
-}
 .btn.btn-warning, .btn.btn-warning:hover, .btn.btn-warning:focus, .btn.btn-warning:active, .btn.btn-warning.active, .btn.btn-warning:active:focus, .btn.btn-warning:active:hover, .btn.btn-warning.active:focus, .btn.btn-warning.active:hover, .open > .btn.btn-warning.dropdown-toggle, .open > .btn.btn-warning.dropdown-toggle:focus, .open > .btn.btn-warning.dropdown-toggle:hover, .navbar .navbar-nav > li > a.btn.btn-warning, .navbar .navbar-nav > li > a.btn.btn-warning:hover, .navbar .navbar-nav > li > a.btn.btn-warning:focus, .navbar .navbar-nav > li > a.btn.btn-warning:active, .navbar .navbar-nav > li > a.btn.btn-warning.active, .navbar .navbar-nav > li > a.btn.btn-warning:active:focus, .navbar .navbar-nav > li > a.btn.btn-warning:active:hover, .navbar .navbar-nav > li > a.btn.btn-warning.active:focus, .navbar .navbar-nav > li > a.btn.btn-warning.active:hover, .open >
  .navbar .navbar-nav > li > a.btn.btn-warning.dropdown-toggle, .open >
  .navbar .navbar-nav > li > a.btn.btn-warning.dropdown-toggle:focus, .open >
  .navbar .navbar-nav > li > a.btn.btn-warning.dropdown-toggle:hover {
-    background-color: #777;
+    background-color: #9E9E9E;
     color: #FFFFFF;
     font-size: 12px;
     text-transform: unset;
 }
-.btn.btn-warning:focus, .btn.btn-warning:active, .btn.btn-warning:hover,
-.navbar .navbar-nav > li > a.btn.btn-warning:focus,
-.navbar .navbar-nav > li > a.btn.btn-warning:active,
-.navbar .navbar-nav > li > a.btn.btn-warning:hover {
-  box-shadow: 0 14px 26px -12px rgba(255, 152, 0, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(255, 152, 0, 0.2);
-}
+
 .btn.btn-warning.disabled, .btn.btn-warning.disabled:hover, .btn.btn-warning.disabled:focus, .btn.btn-warning.disabled.focus, .btn.btn-warning.disabled:active, .btn.btn-warning.disabled.active, .btn.btn-warning:disabled, .btn.btn-warning:disabled:hover, .btn.btn-warning:disabled:focus, .btn.btn-warning:disabled.focus, .btn.btn-warning:disabled:active, .btn.btn-warning:disabled.active, .btn.btn-warning[disabled], .btn.btn-warning[disabled]:hover, .btn.btn-warning[disabled]:focus, .btn.btn-warning[disabled].focus, .btn.btn-warning[disabled]:active, .btn.btn-warning[disabled].active, fieldset[disabled] .btn.btn-warning, fieldset[disabled] .btn.btn-warning:hover, fieldset[disabled] .btn.btn-warning:focus, fieldset[disabled] .btn.btn-warning.focus, fieldset[disabled] .btn.btn-warning:active, fieldset[disabled] .btn.btn-warning.active,
 .navbar .navbar-nav > li > a.btn.btn-warning.disabled,
 .navbar .navbar-nav > li > a.btn.btn-warning.disabled:hover,
@@ -1263,7 +870,7 @@ h2.title {
 .btn.btn-lg, .btn-group-lg .btn, .navbar .navbar-nav > li > a.btn.btn-lg, .btn-group-lg
  .navbar .navbar-nav > li > a.btn {
     font-size: 12px;
-    padding: 18px 36px;
+    padding: 11px;
 }
 .btn.btn-sm, .btn-group-sm .btn,
 .navbar .navbar-nav > li > a.btn.btn-sm, .btn-group-sm
