--- a/app/assets/css/material-dashboard.css
+++ b/app/assets/css/material-dashboard.css
@@ -302,32 +302,17 @@ h2.title {
   box-shadow: 0 2px 2px 0 rgba(153, 153, 153, 0.14), 0 3px 1px -2px rgba(153, 153, 153, 0.2), 0 1px 5px 0 rgba(153, 153, 153, 0.12);
 }
 
-.btn, .btn:hover, .btn:focus, .btn:active, .btn.active, .btn:active:focus, .btn:active:hover, .btn.active:focus, .btn.active:hover, .open > .btn.dropdown-toggle, .open > .btn.dropdown-toggle:focus, .open > .btn.dropdown-toggle:hover, .btn.btn-default, .btn.btn-default:hover, .btn.btn-default:focus, .btn.btn-default:active, .btn.btn-default.active, .btn.btn-default:active:focus, .btn.btn-default:active:hover, .btn.btn-default.active:focus, .btn.btn-default.active:hover, .open > .btn.btn-default.dropdown-toggle, .open > .btn.btn-default.dropdown-toggle:focus, .open > .btn.btn-default.dropdown-toggle:hover,
-.navbar .navbar-nav > li > a.btn,
-.navbar .navbar-nav > li > a.btn:hover,
-.navbar .navbar-nav > li > a.btn:focus,
-.navbar .navbar-nav > li > a.btn:active,
-.navbar .navbar-nav > li > a.btn.active,
-.navbar .navbar-nav > li > a.btn:active:focus,
-.navbar .navbar-nav > li > a.btn:active:hover,
-.navbar .navbar-nav > li > a.btn.active:focus,
-.navbar .navbar-nav > li > a.btn.active:hover, .open >
-.navbar .navbar-nav > li > a.btn.dropdown-toggle, .open >
-.navbar .navbar-nav > li > a.btn.dropdown-toggle:focus, .open >
-.navbar .navbar-nav > li > a.btn.dropdown-toggle:hover,
-.navbar .navbar-nav > li > a.btn.btn-default,
-.navbar .navbar-nav > li > a.btn.btn-default:hover,
-.navbar .navbar-nav > li > a.btn.btn-default:focus,
-.navbar .navbar-nav > li > a.btn.btn-default:active,
-.navbar .navbar-nav > li > a.btn.btn-default.active,
-.navbar .navbar-nav > li > a.btn.btn-default:active:focus,
-.navbar .navbar-nav > li > a.btn.btn-default:active:hover,
-.navbar .navbar-nav > li > a.btn.btn-default.active:focus,
-.navbar .navbar-nav > li > a.btn.btn-default.active:hover, .open >
-.navbar .navbar-nav > li > a.btn.btn-default.dropdown-toggle, .open >
-.navbar .navbar-nav > li > a.btn.btn-default.dropdown-toggle:focus, .open >
-.navbar .navbar-nav > li > a.btn.btn-default.dropdown-toggle:hover {
-  color: #000000;
+.btn, .btn:hover, .btn:focus, .btn:active, .btn.active, .btn:active:focus, .btn:active:hover, .btn.active:focus, .btn.active:hover, .open > .btn.dropdown-toggle, .open > .btn.dropdown-toggle:focus, .open > .btn.dropdown-toggle:hover, .btn.btn-default, .btn.btn-default:hover, .btn.btn-default:focus, .btn.btn-default:active, .btn.btn-default.active, .btn.btn-default:active:focus, .btn.btn-default:active:hover, .btn.btn-default.active:focus, .btn.btn-default.active:hover, .open > .btn.btn-default.dropdown-toggle, .open > .btn.btn-default.dropdown-toggle:focus, .open > .btn.btn-default.dropdown-toggle:hover, .navbar .navbar-nav > li > a.btn, .navbar .navbar-nav > li > a.btn:hover, .navbar .navbar-nav > li > a.btn:focus, .navbar .navbar-nav > li > a.btn:active, .navbar .navbar-nav > li > a.btn.active, .navbar .navbar-nav > li > a.btn:active:focus, .navbar .navbar-nav > li > a.btn:active:hover, .navbar .navbar-nav > li > a.btn.active:focus, .navbar .navbar-nav > li > a.btn.active:hover, .open >
+ .navbar .navbar-nav > li > a.btn.dropdown-toggle, .open >
+ .navbar .navbar-nav > li > a.btn.dropdown-toggle:focus, .open >
+ .navbar .navbar-nav > li > a.btn.dropdown-toggle:hover, .navbar .navbar-nav > li > a.btn.btn-default, .navbar .navbar-nav > li > a.btn.btn-default:hover, .navbar .navbar-nav > li > a.btn.btn-default:focus, .navbar .navbar-nav > li > a.btn.btn-default:active, .navbar .navbar-nav > li > a.btn.btn-default.active, .navbar .navbar-nav > li > a.btn.btn-default:active:focus, .navbar .navbar-nav > li > a.btn.btn-default:active:hover, .navbar .navbar-nav > li > a.btn.btn-default.active:focus, .navbar .navbar-nav > li > a.btn.btn-default.active:hover, .open >
+ .navbar .navbar-nav > li > a.btn.btn-default.dropdown-toggle, .open >
+ .navbar .navbar-nav > li > a.btn.btn-default.dropdown-toggle:focus, .open >
+ .navbar .navbar-nav > li > a.btn.btn-default.dropdown-toggle:hover {
+    color: #555;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px
 }
 .btn:focus, .btn:active, .btn:hover, .btn.btn-default:focus, .btn.btn-default:active, .btn.btn-default:hover,
 .navbar .navbar-nav > li > a.btn:focus,
@@ -3048,12 +3033,6 @@ footer .btn {
 }
 .dropdown-menu li {
   position: relative;
-}
-.dropdown-menu li a:hover,
-.dropdown-menu li a:focus,
-.dropdown-menu li a:active {
-  background-color: #9c27b0;
-  color: #FFFFFF;
 }
 .dropdown-menu .divider {
   margin: 5px 0;
